--- a/CompleteAspnetCore31/CompleteAspnetCore31.csproj
+++ b/CompleteAspnetCore31/CompleteAspnetCore31.csproj
@@ -3,7 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>aspnet-CompleteAspnetCore31-10390627-7368-4472-BDE2-B0EEF6BE98CD</UserSecretsId>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Data\Migrations\20200515062113_AddedLeaveDetailsTables.cs" />
+    <Compile Remove="Data\Migrations\20200515062113_AddedLeaveDetailsTables.Designer.cs" />
+    <Compile Remove="Data\Migrations\20200515063059_AddedDetailsTables.cs" />
+    <Compile Remove="Data\Migrations\20200515063059_AddedDetailsTables.Designer.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.4" />
